Archive2/98/515c549f453c28/output
main.cpp:1:1: error: unknown type name 'test'
test.cpp|5 col 21| error: ‘cout’ was not declared in this scope
^
main.cpp:1:5: error: cannot use dot operator on a type
test.cpp|5 col 21| error: ‘cout’ was not declared in this scope
    ^
main.cpp:1:27: error: non-ASCII characters are not allowed outside of literals and identifiers
test.cpp|5 col 21| error: ‘cout’ was not declared in this scope
                          ^
main.cpp:1:34: error: non-ASCII characters are not allowed outside of literals and identifiers
test.cpp|5 col 21| error: ‘cout’ was not declared in this scope
                               ^
4 errors generated.
